createElementNS() should now throw only InvalidCharacterError, not NamespaceError

Validating a qualified name should only throw InvalidCharacterError, not NamespaceError,
after:
 https://github.com/whatwg/dom/issues/319
 https://github.com/w3c/web-platform-tests/issues/5161
 https://github.com/whatwg/dom/issues/423

Latest spec:
 https://dom.spec.whatwg.org/#validate

Webkit Patch:
 http://trac.webkit.org/changeset/215701/webkit

BUG=702077

Review-Url: https://codereview.chromium.org/2841393003
Cr-Commit-Position: refs/heads/master@{#467936}

Former-commit-id: 423b422b6ce147aa3bb4858ab498802751c52c9b